--- a/Web.Statu/Views/Home/Porovnat.cshtml
+++ b/Web.Statu/Views/Home/Porovnat.cshtml
@@ -51,7 +51,7 @@
 
 <h2>Porovnat firmy</h2>
 <p>Vložte seznam IČ firem, které chcete porovnat. IČ oddělte mezerou, čárkou nebo středníkem.</p>
-<form method="post">
+<form method="post" action="/porovnat/subjekty">
     <div class="row">
 
         <div class="form-group col-md-8">
