--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -122,7 +122,7 @@ ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n
         Podpora politických stran
     </div>
     <div class="new-p">
-        @WebUtil.LowBox(80, Model.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.FirmaEvent.Types.Sponzor))
+        @WebUtil.LowBox(80, Model.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Sponzor))
     </div>
 </div>}
             </div>
