--- a/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
+++ b/Web.Statu/Views/Subjekt/ObchodySeSponzory.cshtml
@@ -97,10 +97,10 @@
                             }
                             else
                             {
-                                var firmaDesc = HlidacStatu.Lib.Data.Firmy.Get(f.Item).Description(true);
-                                if (!string.IsNullOrEmpty(firmaDesc))
+                                var firmaSponzoring = HlidacStatu.Lib.Data.Firmy.Get(f.Item).SponzoringToHtml();
+                                if (!string.IsNullOrEmpty(firmaSponzoring))
                                 {
-                                    sb.AppendFormat("<br/>{0}<br/>&nbsp;", firmaDesc);
+                                    sb.AppendFormat("<br/>{0}<br/>&nbsp;", firmaSponzoring);
                                 }
                             }
                             sb.AppendLine("</li>");
