--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -110,7 +110,7 @@
             Podpora politických stran
         </div>
         <div class="new-p">
-            @WebUtil.LowBox(80, Model.Description(true, m => m.Type == (int)HlidacStatu.Lib.Data.OsobaEvent.Types.Sponzor))
+            @WebUtil.LowBox(80, Model.Sponzoring)
         </div>
     </div>}
             </div>
