--- a/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
+++ b/Web.Statu/Views/Home/Reports/19_PoradciVlady.cshtml
@@ -85,7 +85,7 @@ new ReportDataSource.Column() { Name="Angažovanost ve firmách",
 new ReportDataSource.Column() { Name="Sponzor polit.stran",
     HtmlRender = (s) => {
         Osoba o = (Osoba)s;
-        var sum = o.Sponzoring().Sum(m=>m.AddInfoNum);
+        var sum = o.Sponzoring().Sum(m=>m.Hodnota);
         if (sum==0)
             return "Ne";
         else
@@ -93,7 +93,7 @@ new ReportDataSource.Column() { Name="Sponzor polit.stran",
     },
     OrderValueRender = (s) => {
         Osoba o = (Osoba)s;
-        var val= o.Sponzoring().Sum(m=>m.AddInfoNum) ;
+        var val= o.Sponzoring().Sum(m=>m.Hodnota) ;
         return HlidacStatu.Util.RenderData.OrderValueFormat(val);
     }
 },
