--- a/Web.Statu/Views/Subjekt/Index.cshtml
+++ b/Web.Statu/Views/Subjekt/Index.cshtml
@@ -254,7 +254,7 @@
                 else
                 {
                     <p>
-                        <b>@Devmasters.Lang.Plural.Get(subjectsWithSubsidiesCount, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
+                        <b>@Devmasters.Lang.Plural.Get(subjectsWithSubsidiesCount, "Jedna dceřiná společnost", "{0} dceřiné společnosti", "{0} dceřiných společností")</b>
                         (z celkem @HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))
                         firmy @Devmasters.TextUtil.ShortenText(Model.Jmeno, 35)
 
@@ -286,7 +286,7 @@
                 else
                 {
                     <p>
-                        <b>@Devmasters.Lang.Plural.Get(subjectsWithSubsidiesCount, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
+                        <b>@Devmasters.Lang.Plural.Get(subjectsWithSubsidiesCount, "Jedna dceřiná společnost", "{0} dceřiné společnosti", "{0} dceřiných společností")</b>
                         firmy @Devmasters.TextUtil.ShortenText(Model.Jmeno, 35) nedostaly žádné dotace.
                     </p>}
             }
