--- a/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
@@ -289,7 +289,7 @@
                 && holdingSummaryAfter2016.PocetSmluv > 0
                 )
             {
-                    <b style="padding-left:30px">Statistiky pro @(Model.JsemOVM()? "úřad a jeho podřízené organizace" : "subjekt a všechny dceřinné společnosti") </b>
+                    <b style="padding-left:30px">Statistiky pro @(Model.JsemOVM()? "úřad a jeho podřízené organizace" : "subjekt a všechny dceřiné společnosti") </b>
                 <ul>
                     <li>
                         @{
