--- a/Web.Statu/Views/Subjekt/RightColumn.cshtml
+++ b/Web.Statu/Views/Subjekt/RightColumn.cshtml
@@ -96,7 +96,7 @@
                 {
                     @WebUtil.AddWatchDog(this.User, "holding:" + Model.ICO, null,
                         $"Změny i "
-                        + Devmasters.Lang.Plural.Get(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count(), "v jedné dceřinné společnosti", "ve {0} dceřinných společnostech", "v {0} dceřinných společnostech")
+                        + Devmasters.Lang.Plural.Get(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count(), "v jedné dceřiné společnosti", "ve {0} dceřiných společnostech", "v {0} dceřiných společnostech")
                         + "", prefillWDname: "Novinky pro " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false, preBtnText: "")
                 }
 
